portfolio/portfolio.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio

spec:
  ingressClassName: nginx

  rules:
  - host: praveeninfra.online
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: portfolio-backend-service
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
